--- a/css/master.css
+++ b/css/master.css
@@ -176,6 +176,7 @@ footer, #contact{
   font-family: Impact, sans-serif, Verdana;
   font-size: 14pt;
   text-align: center;
+  width: 900px;
 }
 
 #contact img{
