--- a/css/master.css
+++ b/css/master.css
@@ -106,7 +106,7 @@ article > ul > li {
   }
 }
 
-nav{
+/*nav{
   width: 900px;
   margin: auto;
   text-align: right;
@@ -126,7 +126,7 @@ nav > a{
 
 nav > a:hover{
   background-color: #00c9fd;
-}
+}*/
 
 main{
   width: 1200px;
@@ -179,6 +179,31 @@ float: left;
 
 .lastarticle{
   text-align: center;
+}
+
+#myBtn > img{
+  width: 20px;
+}
+
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  height: 50px;
+  outline: none; /* Remove outline */
+  background-color: #4CAF50; /* Set a background color */
+  color: #f2f2f2; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
 }
 
 article > p > a {
