--- a/css/mobilestyle.css
+++ b/css/mobilestyle.css
@@ -19,12 +19,35 @@
 
   }
 
+  #myBtn > img{
+    width: 20px;
+  }
+
+  #myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 20px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    height: 40px;
+    width: 40px;
+    outline: none; /* Remove outline */
+    background-color: #4CAF50; /* Set a background color */
+    color: #f2f2f2; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 1px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+  }
+
+  #myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+  }
 
   /* Add a black background color to the top navigation */
   .topnav {
     background-color: #333;
     overflow: hidden;
-    border-radius: 3px;
   }
 
   /* Style the links inside the navigation bar */
@@ -200,6 +223,7 @@
     background-position: center;
     position: relative;
   }
+
 
   #bigimage > p{
     color: #00c9fd;
