--- a/css/master.css
+++ b/css/master.css
@@ -157,7 +157,12 @@ article > img{
  margin-left: 10px;
  padding-left: 40px;
  padding-right: 80px;
+ text-align: center;
  float: right;
+}
+
+.bigleft > ul{
+  list-style: none;
 }
 
 .lastarticle img {
@@ -256,25 +261,32 @@ article > h1{
 }
 
 footer, #contact{
-  background-color: #cccccc;
+  background-color: #333;
   width: 100%;
 }
 #contact > table{
-  margin: 20px 0px 0px 500px;
+  margin: 20px 0px 0px 0px;
   padding: 20px;
-  font-family: Impact, sans-serif, Verdana;
   font-size: 14pt;
   text-align: center;
-  width: 200px;
-  border-style: solid;
+  width: 20px;
   }
-#contact img{
-  width: 50px;
-  height: 50px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
 
+  #follow{
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    text-decoration: none;
+    padding: 20px 17px;
+    border-radius: 10px;
+    font-size: 17px;
+  }
+
+  #follow:hover{
+      background-color: #ddd;
+      color: black;
+  }
 
 footer{
   position: center;
