--- a/css/master.css
+++ b/css/master.css
@@ -177,7 +177,7 @@ float: left;
 .lastarticle{
   clear: right;
   margin-left: 370px;
-  width: 820px;
+  width: 790px;
   height: 487px;
   padding: 20px;
 }
@@ -280,6 +280,7 @@ footer, #contact{
     text-decoration: none;
     padding: 20px 17px;
     border-radius: 10px;
+    background-color:
     font-size: 17px;
   }
 
