--- a/css/plusphones.css
+++ b/css/plusphones.css
@@ -235,7 +235,8 @@
     height: 8px;
     position: absolute;
     bottom: 20px;
-    border-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
     right: 225px;
   }
 
@@ -262,20 +263,29 @@
     width: 100%;
   }
   #contact > table{
-    margin: 20px 0px 0px 100px;
+    margin: 20px 0px 0px 0px;
     padding: 20px;
-    font-family: Impact, sans-serif, Verdana;
     font-size: 14pt;
     text-align: center;
-    width: 200px;
-    border-style: solid;
+    width: 20px;
     }
-  #contact img{
-    width: 50px;
-    height: 50px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
+
+    #follow{
+      float: left;
+      display: block;
+      color: #f2f2f2;
+      text-align: center;
+      text-decoration: none;
+      padding: 20px 17px;
+      margin-left: 125px;
+      border-radius: 10px;
+      background-color:
+    }
+
+    #follow:hover{
+        background-color: #ddd;
+        color: black;
+    }
 
 
   footer{
