--- a/css/master.css
+++ b/css/master.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 1000px){
+@media screen and (min-width: 1080px){
 
 * {
   margin: 0;
@@ -293,8 +293,18 @@ footer > p {
   font-size: 12px;
   height: 50px;
   text-align: center;
-  width: 2000px;
+  width: 1863px;
   background-color: #333;
 
+  }
+}
+
+@@media screen and (max-width: 1080px) {
+  #bigimage{
+    height: 200px;
+  }
+  header > h1 {
+    width: 100%;
+    padding-left: 15px;
   }
 }
