--- a/css/master.css
+++ b/css/master.css
@@ -5,7 +5,7 @@
 }
 
 body{
-  font-family: Helvetica;
+  font-family: 'Roboto';
   font-size: 14pt;
   background-image: url("https://images.pexels.com/photos/242236/pexels-photo-242236.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
 }
@@ -20,6 +20,35 @@ p {
 
 }
 
+/* Style the video: 100% width and height to cover the entire window */
+#myVideo {
+  position: absolute;
+  left: 200px;
+  top: 180px;
+  width: 730px;
+  height: 420px;
+  border-radius: 10px;
+  background-color: #4CAF50;
+  border-style: solid;
+}
+
+/* Style the button used to pause/play the video */
+#mySNDBtn {
+  font-family: 'Roboto', Verdana, sans-serif;
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center; /*CONTINUE HERE, IK PROBEER DE PAUZE BUTTON BIJ HET VIDEOTJE TE KRIJGEN*/
+  padding: 14px 13.8px;
+  text-decoration: none;
+  background-color: #333;
+  font-size: 17px;
+}
+
+#mySNDBtn:hover {
+  background: #ddd;
+  color: black;
+}
 
 header > h1{
   padding-top: 20px;
@@ -28,7 +57,7 @@ header > h1{
   padding-right: 5px;
   color: black;
   font-size: 30pt;
-  font-family: Courier, Verdana, serif;
+  font-family: 'Roboto', 'Karla', serif;
   font-weight: normal;
   margin: auto;
 }
@@ -44,7 +73,7 @@ header > h1{
 
 article > ul > li {
   font-size: 12pt;
-  font-family: Courier;
+  font-family: Roboto;
   padding-bottom: 10px;
 }
 
@@ -56,6 +85,7 @@ article > ul > li {
 
 /* Style the links inside the navigation bar */
 .topnav a {
+  font-family: 'Roboto', Verdana, sans-serif;
   float: left;
   display: block;
   color: #f2f2f2;
@@ -106,28 +136,6 @@ article > ul > li {
   }
 }
 
-/*nav{
-  width: 900px;
-  margin: auto;
-  text-align: right;
-}
-
-nav > a{
-  font-family: Courier, Verdana, serif;
-  font-size: 10pt;
-  color: black;
-  text-decoration: none;
-  display: inline-block;
-  width: 200px;
-  height: 50px;
-  text-align: center;
-  line-height: 50px;
-}
-
-nav > a:hover{
-  background-color: #00c9fd;
-}*/
-
 main{
   width: 1200px;
   position: center;
@@ -143,17 +151,9 @@ article > img{
   margin: 20px;
 }
 
-.newdiv > p {
-  text-align: center;
-  font-family: Courier;
-  font-weight: bold;
-  color: #bb3d00;
-  font-style: oblique;
-
-}
-
 .bigleft{
  width: 712px;
+ font-family: 'Roboto', Verdana, sans-serif;
  margin-left: 10px;
  padding-left: 40px;
  padding-right: 80px;
@@ -165,13 +165,14 @@ article > img{
   list-style: none;
 }
 
-.lastarticle img {
-}
-
 .smallright{
 width: 290px;
-margin-left: 10px;
+padding-right: 30px;
+font-family: 'Roboto';
+font-weight: 390;
+text-align: center;
 float: left;
+font-size: 13.8pt;
 }
 
 .lastarticle{
@@ -212,6 +213,7 @@ float: left;
 }
 
 article > p > a {
+  font-family: 'Roboto', Verdana, sans-serif;
   font-weight: bold;
   color: purple;
   text-decoration: none;
@@ -232,6 +234,7 @@ article > p > a:hover {
 }
 
 #bigimage > p{
+  font-family: 'Roboto', Verdana, sans-serif;
   color: #00c9fd;
   background-color: #ffffff;
   text-align: center;
@@ -256,7 +259,8 @@ article{
 article > h1{
   text-align: center;
   padding: 10px;
-  font-family: 'Karla', sans-serif;
+  font-weight: 300;
+  font-family: 'Roboto', Verdana, sans-serif;
   font-size: 25pt;
 }
 
@@ -293,18 +297,8 @@ footer > p {
   font-size: 12px;
   height: 50px;
   text-align: center;
-  width: 1863px;
+  width: 1690px;
   background-color: #333;
-
-  }
-}
-
-@@media screen and (max-width: 1080px) {
-  #bigimage{
-    height: 200px;
-  }
-  header > h1 {
-    width: 100%;
-    padding-left: 15px;
+  font-family: 'Roboto', Verdana, sans-serif;
   }
 }
