--- a/css/master.css
+++ b/css/master.css
@@ -23,12 +23,11 @@ p {
 #myVideoTwee{
   margin-top: 19px;
   margin-left: 39px;
-  width: 293px;
-  height: 422px;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  width: 291px;
+  height: 532px;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 10px;
   background-color: #4CAF50;
 }
 
@@ -162,6 +161,7 @@ article > img{
 }
 
 .bigleft > ul{
+  text-align: center;
   list-style: none;
 }
 
@@ -173,7 +173,7 @@ article > img{
 .smallright{
 background-image: linear-gradient(to bottom right, #eadcdc, #cfc9c4);
 width: 265px;
-height: 374px;
+height: 350px;
 float:left;
 margin-left: 39px;
 padding-right: 30px;
@@ -187,6 +187,7 @@ font-size: 13.8pt;
   width: 275px;
   background-color: #4CAF50;
   border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
 }
 
 
@@ -195,9 +196,10 @@ font-size: 13.8pt;
   font-weight: 390;
   clear: right;
   margin-left: 370px;
-  margin-top: -200px;
+  margin-top: -305px;
   width: 829px;
-  height: 595px;
+  height: 625px;
+  padding-bottom: 50px;
 }
 
 .lastarticle{
@@ -210,6 +212,16 @@ font-size: 13.8pt;
   background-color: #4CAF50;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
+}
+
+.lastarticle > #lastarticlep2 {
+  margin-top: -29px;
+  margin-bottom: 2px;
+}
+
+.lastarticle > iframe{
+  height: 360px;
+  width: 725px;
 }
 
 #myBtn > img{
@@ -316,9 +328,6 @@ article > h1{
     border-radius: 10px;
   }
 
-#lastarticle > iframe{
-  border-radius: 10px;
-}
 
 footer > p {
   color: #f2f2f2;
