--- a/css/plusphones.css
+++ b/css/plusphones.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 415px){
+@media screen and (max-width: 414px){
   * {
     margin: 0;
   }
@@ -18,7 +18,28 @@
     background-color: white;
 
   }
+  #myVideoTwee{
+    margin-top: 19px;
+    margin-left: 39px;
+    width: 291px;
+    height: 532px;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 10px;
+    background-color: #4CAF50;
+  }
 
+  /* Style the video: 100% width and height to cover the entire window */
+  #myVideo {
+    position: absolute;
+    left: 200px;
+    top: 180px;
+    width: 730px;
+    height: 420px;
+    border-radius: 10px;
+    background-color: #4CAF50;
+    border-style: solid;
+  }
   #myBtn > img{
     width: 20px;
   }
