--- a/css/plusphones.css
+++ b/css/plusphones.css
@@ -19,25 +19,24 @@
 
   }
   #myVideoTwee{
-    margin-top: 19px;
-    margin-left: 39px;
-    width: 291px;
-    height: 532px;
-    border-style: solid;
-    border-width: 2px;
-    border-radius: 10px;
+    width: 414px;
+    color: #4CAF50;
+    height: 552px;
+    margin-top: 24px;
     background-color: #4CAF50;
+      border-style: solid;
   }
 
   /* Style the video: 100% width and height to cover the entire window */
   #myVideo {
     position: absolute;
-    left: 200px;
-    top: 180px;
-    width: 730px;
-    height: 420px;
+    left: 7px;
+    top: 280px;
+    width: 400px;
+    height: 220px;
     border-radius: 10px;
     background-color: #4CAF50;
+    border-width:
     border-style: solid;
   }
   #myBtn > img{
@@ -168,17 +167,49 @@ article > ul {
   }
 
   .bigleft{
+    background-image: linear-gradient(to bottom right, #eadcdc, #cfc9c4);
    width: 414px;
    height: 230px;
   }
 
+  .bigleft > h1 {
+    font-weight: 200;
+    width: 394px;
+    background-color: #4CAF50;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+  }
+
+  .bigleft > p {
+    font-weight: 350;
+  }
+
+  .bigleft > ul {
+
+    font-weight: 380;
+  }
 
   .smallright{
+    background-image: linear-gradient(to bottom right, #eadcdc, #cfc9c4);
   width: 414px;
   float: left;
   }
 
+  .smallright > h1 {
+    font-weight: 200;
+    width: 394px;
+    background-color: #4CAF50;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+  }
+
+  .smallright > p {
+    font-weight: 350;
+  }
+
+
   .lastarticle{
+    background-image: linear-gradient(to bottom right, #eadcdc, #cfc9c4);
     clear: left;
     margin-top: 10px;
     width: 414px;
@@ -187,6 +218,18 @@ article > ul {
 
   .lastarticle{
     text-align: center;
+  }
+
+  .lastarticle > h1 {
+    font-weight: 200;
+    width: 394px;
+    background-color: #4CAF50;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+  }
+
+  .lastarticle > p {
+    font-weight: 350;
   }
 
   .lastarticle > iframe{
@@ -253,7 +296,7 @@ article > ul {
   footer > p {
     color: #f2f2f2;
     font-size: 11px;
-    margin-top: 160px;
+    margin-top: 640px;
     height: 30px;
     width: 374px;
     background-color: #333;
