--- a/css/master.css
+++ b/css/master.css
@@ -10,6 +10,12 @@ body{
   background-image: url("https://images.pexels.com/photos/242236/pexels-photo-242236.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
 }
 
+.mainwrapper{
+  margin: auto;
+  height: 1000px;
+  width: 1904px;
+}
+
 p {
   padding: 20px;
 }
@@ -22,9 +28,11 @@ p {
 
 #myVideoTwee{
   margin-top: 19px;
-  margin-left: 39px;
+  top: 10px;
+  left: -702px;
   width: 291px;
   height: 532px;
+  position: relative;
   border-style: solid;
   border-width: 2px;
   border-radius: 10px;
@@ -33,9 +41,9 @@ p {
 
 /* Style the video: 100% width and height to cover the entire window */
 #myVideo {
-  position: absolute;
-  left: 200px;
-  top: 180px;
+  position: relative;
+  left: -90px;
+  top: -630px;
   width: 730px;
   height: 420px;
   border-radius: 10px;
@@ -137,8 +145,9 @@ article > ul > li {
 
 .image {
   display: block;
+  margin: auto;
   height: 560px;
-  width: 1080;
+  width: 1904px;
   position: relative;
 }
 
@@ -183,7 +192,7 @@ article > ul > li {
   right: 0;
   background-color: #4CAF50;
   overflow: hidden;
-  width: 1680px;
+  width: 1904px;
   height:0;
   transition: .5s ease;
 }
@@ -207,6 +216,7 @@ article > ul > li {
 
 main{
   width: 1200px;
+  height: 950px;
   position: center;
   margin: auto;
 }
@@ -221,6 +231,8 @@ article > img{
 }
 
 .bigleft{
+  bottom: 550px;
+  position: relative;
  font-weight: 390;
  background-image: linear-gradient(to bottom right, #eadcdc, #cfc9c4);
  width: 832px;
@@ -250,7 +262,7 @@ article > img{
 background-image: linear-gradient(to bottom right, #eadcdc, #cfc9c4);
 width: 265px;
 height: 350px;
-float:left;
+position: relative;
 margin-left: 39px;
 padding-right: 30px;
 font-family: 'Roboto';
@@ -268,6 +280,8 @@ font-size: 13.8pt;
 
 
 .lastarticle{
+  position: relative;
+  top: -551px;
   background-image: linear-gradient(to bottom right, #eadcdc, #cfc9c4);
   font-weight: 390;
   clear: right;
@@ -275,7 +289,7 @@ font-size: 13.8pt;
   margin-top: -305px;
   width: 829px;
   height: 625px;
-  padding-bottom: 50px;
+  padding-bottom: 53px;
 }
 
 .lastarticle{
@@ -347,8 +361,8 @@ article > p > a:hover {
   width: 150px;
   height: 11px;
   position: absolute;
-  bottom: 715px;
-  right: 355px;
+  bottom: 826px;
+  right: 425px;
 }
 
 article, #contact{
@@ -397,12 +411,13 @@ article > h1{
 
 
 footer > p {
+  position: relative;
   color: #f2f2f2;
   font-size: 12px;
   margin-top: 50px;
   height: 30px;;
   text-align: center;
-  width: 100%;
+  width: 1864px;
   background-color: #333;
   font-family: 'Roboto', Verdana, sans-serif;
   }
